--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "https://swallsky.github.io/",
   "scripts": {
-    "build": "yarn tsx app.ts"
+    "build": "yarn tsx app.tsx"
   },
   "keywords": [],
   "author": "",
