--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "https://swallsky.github.io/",
   "scripts": {
     "dev":"nodemon --watch src app.tsx --exec tsx app.tsx",
-    "build": "yarn tsx app.tsx"
+    "build": "rm -rf _cache && rm -rf dist && yarn tsx app.tsx"
   },
   "keywords": [],
   "author": "",
