--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "https://swallsky.github.io/",
   "scripts": {
-    "dev":"nodemon --watch src app.tsx --exec tsx app.tsx",
-    "build": "rm -rf _cache && rm -rf dist && yarn tsx app.tsx"
+    "dev": "nodemon --watch src app.tsx --exec tsx app.ts",
+    "build": "rm -rf _cache && rm -rf dist && yarn tsx app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "esbuild": "^0.19.11",
     "nodemon": "^3.0.2",
     "tsx": "^4.7.0"
