--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^8.2.2",
     "esbuild": "^0.19.11",
     "nodemon": "^3.0.2",
+    "styled-components": "^6.1.8",
     "tsx": "^4.7.0"
   },
   "dependencies": {
