--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "tsx": "^4.7.0"
   },
   "dependencies": {
+    "@sindresorhus/slugify": "^2.2.1",
     "highlight.js": "^11.9.0",
     "markdown-it": "^14.0.0",
+    "markdown-it-anchor": "^8.6.7",
+    "markdown-it-toc-done-right": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
